# vscodecpp

./: .gitignore  README.md
1.Starter/: helloworld.cpp  main.cpp
1.TasksWindows/: main.cpp
2.CMakeWithKits/: CMakeLists.txt  main.cpp
2.MultipleFilesAndCompilers/: main.cpp  person.cpp
2.TasksLinux/: main.cpp  person.h
3.CMakeWithKits/: CMakeLists.txt  main.cpp
3.CMakeWithPresets/: CMakeLists.txt  main.cpp
3.TasksLinux/: main.cpp
4.CMakeWithCppModules/: CMakePresets.json  main.cpp
4.CMakeWithPresets/: main.cpp
5..CMakeWithCppModules/: CMakeLists.txt  calculator.ixx  main.cpp
5.CMakeWithPresets/: main.cpp
6.CMakeWithCppModules/: CMakePresets.json
slides/: 0.Intro.drawio  1.Starter.drawio  3.CMakeWithKits.drawio  4.CMakeWithPresets.drawio  5..CMakeWithCppModules.drawio
